khi changes garey

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <title>title</title>
   </head>
   <body>
-    <h1>I'm Learning and testing git and github</h1>
+    <h1>I'm Learning and testing git and github,it's interesting</h1>
   </body>
 </html>
